<resources>
    <string name="app_name">Phonics App</string>
    <string name="titleString">Star Game</string>
    <string name="start_button">Start</string>
    <string name="menu_title">Pick Game Mode</string>
    <string name="button1">Short A</string>
    <string name="button2">Short E</string>
    <string name="button3">Short I</string>
    <string name="button4">Short O</string>
    <string name="button5">Short U</string>
    <string name="button6">Long A</string>
    <string name="button7">Long E</string>
    <string name="button8">Long I</string>
    <string name="button9">Long O</string>
    <string name="button10">Long U</string>
    <string name="game_heading">Don\'t Get the Star!</string>
    <string name="new_game">New Game</string>
</resources>
