<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michael.appforsarah.MenuActivity"
    android:background="#009ad7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_below="@+id/textView2">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="openGame"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:onClick="openGame"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            android:id="@+id/button7"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9"
            android:id="@+id/button9"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="openGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button10"
            android:id="@+id/button10"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
